<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuienesSomos">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main"/>


    <ImageView
        android:id="@+id/logo_prosciense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quienes Somos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/descripcionQuienes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionQuienesSomos"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mision"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/descripcionMision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionMision"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/vision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Visión"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/descripcionVision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionVision" />

</LinearLayout>