<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductosUsuario">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Usuario"
        tools:ignore="ExtraText">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/carrito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/carrito"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:text="@string/menu"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/imageButton5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/chorizo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:onClick="img_btn_Chorizo"
            app:srcCompat="@drawable/chorizoconarepa"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/crepes"
            android:onClick="img_btn_Crepes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/crepes"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/empanadas"
            android:onClick="img_btn_Empanadas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/empanadas"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/sandwich"
            android:onClick="img_btn_Sandwiches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/sandwich"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/tacos"
            android:onClick="img_btn_Tacos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:srcCompat="@drawable/tacos"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/hamburguesa"
            android:onClick="img_btn_Hamburguesa"
            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/hamburguesa"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/perro"
            android:onClick="img_btn_Perros"
            app:layout_constraintEnd_toStartOf="@+id/imageButton7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/perro"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/pinchos"
            android:onClick="img_btn_Pinchos"
            app:layout_constraintEnd_toStartOf="@+id/imageButton8"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/pinchos"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/pizza"
            android:onClick="img_btn_Pizza"
            app:layout_constraintEnd_toStartOf="@+id/imageButton9"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/pizza"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/salchipapa"
            android:onClick="img_btn_Salchipapa"
            app:layout_constraintEnd_toStartOf="@+id/imageButton10"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/salchipapa"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/hamburguesa"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:text="@string/chorizo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/perro"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.369"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton12" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/crepes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/pinchos"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton13" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/empanadas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/pizza"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton14" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/sandwich"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/salchipapa"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton15" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="76dp"
            android:text="@string/tacos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>